[project]
name = "nanochatlens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "torch>=2.8.0",
    "protobuf>=6.33.0",
    "sentencepiece>=0.2.0",
    "transformers>=4.46.0",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "onnxscript>=0.7.0",
]
